# aws-drf-playground

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose-deploy.yml  docker-compose.yaml  example.env  pyproject.toml  requirements.dev.txt  requirements.txt  setup.cfg
.github/workflows/: ci.yml  tests.yml
src/app/: .coveragerc
src/app/app/: settings.py  urls.py
src/app/core/: admin.py  exception_handler.py  models.py  serializers.py  urls.py  utils.py  views.py
src/app/core/migrations/: 0001_initial.py
src/app/core/tests/: models_test.py  test_admin.py  test_jokes_api.py  test_models.py
src/app/user/: serializers.py  urls.py  views.py
src/app/user/tests/: test_user_api.py
