[metadata]
name = aws_drf_playground
long_description = file: README.md
long_description_content_type = text/markdown

[mypy]
plugins =
    mypy_django_plugin.main
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true

[mypy.plugins.django-stubs]
django_settings_module = "app.settings"

[flake8]
max-line-length = 120
exclude =
    **/migrations
